SmartInvest: add DB

--- a/SmartInvest/app/src/main/res/layout/activity_main.xml
+++ b/SmartInvest/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,17 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/main_tv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/empty_savedfunds"/>
+
+
+
+
+
     <ListView
         android:id="@+id/main_lv_savedfundlist"
         android:layout_width="match_parent"
