--- a/SmartInvest/app/src/main/res/menu/onefund.xml
+++ b/SmartInvest/app/src/main/res/menu/onefund.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <item
-        android:id="@+id/menu_addfund"
+        android:id="@+id/menu_addtrans"
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="100"
-        android:title="@string/add_fund"
+        android:title="@string/onefund_addtran"
         app:showAsAction="always"/>
 
 </menu>
